proper compile in unnamed module